basic forms for create/edit are working... need to figure out how to render action parameter.

--- a/Source/Yobao/Views/Yobao/Create.cshtml
+++ b/Source/Yobao/Views/Yobao/Create.cshtml
@@ -14,19 +14,12 @@
 <body>
 	<form>
 		@foreach (var prop in properties) {
-			if (prop.GetCustomAttributes(typeof(System.ComponentModel.DataAnnotations.KeyAttribute), true).Any()) {
-				<input type="hidden" name="@prop.Name" value="@prop.GetValue(Model)" />
-			} else {
-				<div class="form-group">
-					<label>@prop.Name</label>
-					<input name="@prop.Name" value="@prop.GetValue(Model)" />
-				</div>
-			}
+			<div class="form-group">
+				<label>@prop.Name</label>
+				<input name="@prop.Name" value="@prop.GetValue(Model)" />
+			</div>
 		}
-		<div><button type="submit"></button></div>
+		<div><button type="submit">Save</button></div>
 	</form>
-
-
-
 </body>
 </html>
