--- a/Source/Yobao/Views/Yobao/Create.cshtml
+++ b/Source/Yobao/Views/Yobao/Create.cshtml
@@ -12,14 +12,14 @@
     <title></title>
 </head>
 <body>
-	<form>
+	<form action="Create" method="post">
 		@foreach (var prop in properties) {
 			<div class="form-group">
 				<label>@prop.Name</label>
 				<input name="@prop.Name" value="@prop.GetValue(Model)" />
 			</div>
 		}
-		<div><button type="submit">Save</button></div>
+		<div><input type="submit" value="Save" /></div>
 	</form>
 </body>
 </html>
